--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-	"//1": "describes your app and its dependencies",
-	"//2": "https://docs.npmjs.com/files/package.json",
-	"//3": "updating this file will download and update your packages",
-	"name": "emojimind",
-	"version": "0.0.1",
-	"description": "What am I about?",
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js",
-		"test": "ava public/test.js"
-	},
-	"dependencies": {
-		"express": "^4.12.4",
-		"ava": "^0.16.0"
-	},
-	"engines": {
-		"node": "4.4.3"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://hyperdev.com/#!/project/glaze-puppy"
-	},
-	"keywords": [
-		"node",
-		"hyperdev",
-		"game"
-	],
-	"license": "MIT"
+  "name": "emojimind",
+  "version": "0.0.1",
+  "description": "A small mastermind variant",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "xo && ava public/test.js"
+  },
+  "dependencies": {
+    "express": "^4.12.4",
+    "ava": "^0.16.0"
+  },
+  "engines": {
+    "node": "4.4.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://hyperdev.com/#!/project/glaze-puppy"
+  },
+  "keywords": [
+    "node",
+    "hyperdev",
+    "game"
+  ],
+  "license": "MIT",
+  "devDependencies": {
+    "xo": "^0.16.0"
+  },
+  "xo": {
+    "semicolon": false 
+  }
 }
