--- a/package.json
+++ b/package.json
@@ -2,32 +2,37 @@
   "name": "emojimind",
   "version": "0.0.1",
   "description": "A small mastermind variant",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "xo && ava public/test.js"
+    "start": "browser-sync start --server 'src' --files 'src'",
+    "build": "rollup -c",
+    "test": "xo && ava"
   },
   "dependencies": {
-    "express": "^4.12.4",
-    "ava": "^0.16.0"
+    "debug": "^2.2.0"
   },
-  "engines": {
-    "node": "4.4.3"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://hyperdev.com/#!/project/glaze-puppy"
-  },
-  "keywords": [
-    "node",
-    "hyperdev",
-    "game"
-  ],
-  "license": "MIT",
   "devDependencies": {
+    "ava": "^0.16.0",
+    "babel-preset-es2015-rollup": "^1.2.0",
+    "browser-sync": "^2.17.5",
+    "rollup": "^0.36.3",
+    "rollup-plugin-babel": "^2.6.1",
     "xo": "^0.16.0"
   },
+  "ava": {
+    "require": [
+      "babel-register"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "es2015-rollup"
+    ]
+  },
   "xo": {
-    "semicolon": false 
-  }
+    "semicolon": false
+  },
+  "keywords": [
+    "game"
+  ],
+  "license": "MIT"
 }
