--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "ava": "^0.16.0",
+    "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-rollup": "^1.2.0",
     "browser-sync": "^2.17.5",
     "rollup": "^0.36.3",
@@ -25,7 +26,7 @@
   },
   "babel": {
     "presets": [
-      "es2015-rollup"
+      "es2015"
     ]
   },
   "xo": {
