--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "rollup -c",
     "test": "xo && ava"
   },
+	"engines": {
+		"node": ">= 6.0.0"
+	},
   "dependencies": {
     "debug": "^2.2.0"
   },
