--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node browser-sync.js",
     "build": "rollup -c",
+    "dev": "npm run start; rollup -c -w",
     "test": "xo && ava"
   },
   "engines": {
@@ -20,6 +21,7 @@
     "browser-sync": "^2.17.5",
     "rollup": "^0.36.3",
     "rollup-plugin-babel": "^2.6.1",
+    "rollup-watch": "^4.3.1",
     "xo": "^0.16.0"
   },
   "ava": {
