--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
   "engines": {
     "node": ">= 6.0.0"
   },
-  "dependencies": {
-    "debug": "^2.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "ava": "^0.16.0",
+    "ava": "^2.1.0",
     "browser-sync": "^2.17.5",
     "xo": "^0.16.0"
   },
@@ -23,5 +21,10 @@
   "keywords": [
     "game"
   ],
+	"ava": {
+		"require": [
+			"esm"
+		]
+	},
   "license": "MIT"
 }
