--- a/package.json
+++ b/package.json
@@ -4,28 +4,16 @@
   "description": "A small mastermind variant",
   "scripts": {
     "start": "browser-sync src --watch --no-notify",
-    "test": "xo && ava"
-  },
-  "engines": {
-    "node": ">= 6.0.0"
+    "test": "eslint ./src && ava"
   },
   "devDependencies": {
     "ava": "^2.1.0",
     "browser-sync": "^2.17.5",
-    "xo": "^0.24.0"
+    "eslint": "^6.0.1"
   },
   "keywords": [
     "game"
   ],
-  "xo": {
-    "envs": ["browser"],
-    "semicolon": false,
-    "prettier": true,
-    "rules": { 
-      "import/extensions": "never",
-      "guard-for-in": "warn"
-    }
-  },
   "ava": {
     "require": [
       "esm"
